--- a/Custom_Clash.ini
+++ b/Custom_Clash.ini
@@ -12,7 +12,6 @@ ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rul
 ruleset=𝕏 Twitter,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Twitter/Twitter.list
 ruleset=📲 Telegram,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Telegram/Telegram.list
 ruleset=💾 MEGA,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/MEGA/MEGA.list
-ruleset=💾 云端硬盘,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/GoogleDrive/GoogleDrive.list
 ruleset=🦁 Kemono,https://raw.githubusercontent.com/request-code/qx/refs/heads/main/rule/kemono.list
 ruleset=🐼 Iwara,https://raw.githubusercontent.com/request-code/qx/refs/heads/main/rule/iwara.list
 ruleset=💬 ChatGPT,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OpenAI/OpenAI.list
@@ -37,40 +36,38 @@ ruleset=🎯 全球直连,[]GEOIP,CN,no-resolve
 ruleset=🐟 漏网之鱼,[]FINAL
 
 custom_proxy_group=🚀 手动切换`select`.*
-custom_proxy_group=♻ 主用自动`url-test`!!GROUPID=!1!!.*`http://cp.cloudflare.com/generate_204`180,,50
-custom_proxy_group=♻ 备用自动`url-test`!!GROUPID=!0!!.*`http://cp.cloudflare.com/generate_204`180,,50
-custom_proxy_group=🪢 主用聚合`url-test`!!GROUPID=!1!!(澳门|印度|意大利|智利|法国|哥伦比亚|莫斯科|菲律宾|尼日利亚|土耳其|马来|泰国|南非|英国|越南|以色列|沙特|迪拜|澳大利亚|加拿大|墨西哥|瑞典|西班牙|巴西|荷兰|德国)`http://cp.cloudflare.com/generate_204`180,,50
-custom_proxy_group=🚀 节点选择`select`[]🇭🇰 主用香港`[]🇭🇰 备用香港`[]🇨🇳 主用台湾`[]🇨🇳 备用台湾`[]🇺🇸 主用美国`[]🇺🇸 备用美国`[]🇯🇵 主用日本`[]🇯🇵 备用日本`[]🇸🇬 主用土坡`[]🇸🇬 备用土坡`[]🇰🇷 韩国节点`[]♻ 主用自动`[]♻ 备用自动`[]🪢 主用聚合`[]🚀 手动切换
-custom_proxy_group=🚀 GitHub`select`[]🇭🇰 主用香港`[]🇨🇳 主用台湾`[]🇺🇸 主用美国`[]🇯🇵 主用日本`[]🇸🇬 主用土坡`[]🇰🇷 韩国节点`[]♻ 主用自动`[]♻ 备用自动`[]🪢 主用聚合`[]🚀 手动切换
-custom_proxy_group=𝕏 Twitter`select`[]🇭🇰 主用香港`[]🇭🇰 备用香港`[]🇨🇳 主用台湾`[]🇨🇳 备用台湾`[]🇺🇸 主用美国`[]🇺🇸 备用美国`[]🇯🇵 主用日本`[]🇯🇵 备用日本`[]🇸🇬 主用土坡`[]🇸🇬 备用土坡`[]🇰🇷 韩国节点`[]♻ 主用自动`[]♻ 备用自动`[]🪢 主用聚合`[]🚀 手动切换
-custom_proxy_group=📲 Telegram`select`[]🇭🇰 主用香港`[]🇭🇰 备用香港`[]🇨🇳 主用台湾`[]🇨🇳 备用台湾`[]🇺🇸 主用美国`[]🇺🇸 备用美国`[]🇯🇵 主用日本`[]🇯🇵 备用日本`[]🇸🇬 主用土坡`[]🇸🇬 备用土坡`[]🇰🇷 韩国节点`[]♻ 主用自动`[]♻ 备用自动`[]🪢 主用聚合`[]🚀 手动切换
-custom_proxy_group=🦁 Kemono`select`[]🇭🇰 主用香港`[]🇭🇰 备用香港`[]🇨🇳 主用台湾`[]🇨🇳 备用台湾`[]🇺🇸 主用美国`[]🇺🇸 备用美国`[]🇯🇵 主用日本`[]🇯🇵 备用日本`[]🇸🇬 主用土坡`[]🇸🇬 备用土坡`[]🇰🇷 韩国节点`[]♻ 主用自动`[]♻ 备用自动`[]🪢 主用聚合`[]🚀 手动切换
-custom_proxy_group=🐼 Iwara`select`[]🇭🇰 主用香港`[]🇭🇰 备用香港`[]🇨🇳 主用台湾`[]🇨🇳 备用台湾`[]🇺🇸 主用美国`[]🇺🇸 备用美国`[]🇯🇵 主用日本`[]🇯🇵 备用日本`[]🇸🇬 主用土坡`[]🇸🇬 备用土坡`[]🇰🇷 韩国节点`[]♻ 主用自动`[]♻ 备用自动`[]🪢 主用聚合`[]🚀 手动切换
-custom_proxy_group=💾 MEGA`select`[]🇭🇰 主用香港`[]🇭🇰 备用香港`[]🇨🇳 主用台湾`[]🇨🇳 备用台湾`[]🇺🇸 主用美国`[]🇺🇸 备用美国`[]🇯🇵 主用日本`[]🇯🇵 备用日本`[]🇸🇬 主用土坡`[]🇸🇬 备用土坡`[]🇰🇷 韩国节点`[]♻ 主用自动`[]♻ 备用自动`[]🪢 主用聚合`[]🚀 手动切换
-custom_proxy_group=💾 云端硬盘`select`[]🇭🇰 主用香港`[]🇭🇰 备用香港`[]🇨🇳 主用台湾`[]🇨🇳 备用台湾`[]🇺🇸 主用美国`[]🇺🇸 备用美国`[]🇯🇵 主用日本`[]🇯🇵 备用日本`[]🇸🇬 主用土坡`[]🇸🇬 备用土坡`[]🇰🇷 韩国节点`[]♻ 主用自动`[]♻ 备用自动`[]🪢 主用聚合`[]🚀 手动切换
+custom_proxy_group=♻ 主用自动`url-test`!!GROUPID=!1!!.*`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=♻ 备用自动`url-test`!!GROUPID=!0!!.*`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🪢 主用聚合`url-test`!!GROUPID=!1!!(澳门|印度|意大利|智利|法国|哥伦比亚|莫斯科|菲律宾|尼日利亚|土耳其|马来|泰国|南非|英国|越南|以色列|沙特|迪拜|澳大利亚|加拿大|墨西哥|瑞典|西班牙|巴西|荷兰|德国)`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🚀 节点选择`select`[]🇭🇰 主用香港`[]🇭🇰 备用香港`[]🇨🇳 主用台湾`[]🇨🇳 备用台湾`[]🇺🇸 主用美国`[]🇺🇸 备用美国`[]🇯🇵 主用日本`[]🇯🇵 备用日本`[]🇸🇬 主用土坡`[]🇸🇬 备用土坡`[]♻ 主用自动`[]♻ 备用自动`[]🪢 主用聚合`[]🚀 手动切换
+custom_proxy_group=🚀 GitHub`select`[]🇭🇰 主用香港`[]🇨🇳 主用台湾`[]🇺🇸 主用美国`[]🇯🇵 主用日本`[]🇸🇬 主用土坡`[]♻ 主用自动`[]♻ 备用自动`[]🪢 主用聚合`[]🚀 手动切换
+custom_proxy_group=𝕏 Twitter`select`[]🇭🇰 主用香港`[]🇭🇰 备用香港`[]🇨🇳 主用台湾`[]🇨🇳 备用台湾`[]🇺🇸 主用美国`[]🇺🇸 备用美国`[]🇯🇵 主用日本`[]🇯🇵 备用日本`[]🇸🇬 主用土坡`[]🇸🇬 备用土坡`[]♻ 主用自动`[]♻ 备用自动`[]🪢 主用聚合`[]🚀 手动切换
+custom_proxy_group=📲 Telegram`select`[]🇭🇰 主用香港`[]🇭🇰 备用香港`[]🇨🇳 主用台湾`[]🇨🇳 备用台湾`[]🇺🇸 主用美国`[]🇺🇸 备用美国`[]🇯🇵 主用日本`[]🇯🇵 备用日本`[]🇸🇬 主用土坡`[]🇸🇬 备用土坡`[]♻ 主用自动`[]♻ 备用自动`[]🪢 主用聚合`[]🚀 手动切换
+custom_proxy_group=🦁 Kemono`select`[]🇭🇰 主用香港`[]🇭🇰 备用香港`[]🇨🇳 主用台湾`[]🇨🇳 备用台湾`[]🇺🇸 主用美国`[]🇺🇸 备用美国`[]🇯🇵 主用日本`[]🇯🇵 备用日本`[]🇸🇬 主用土坡`[]🇸🇬 备用土坡`[]♻ 主用自动`[]♻ 备用自动`[]🪢 主用聚合`[]🚀 手动切换
+custom_proxy_group=🐼 Iwara`select`[]🇭🇰 主用香港`[]🇭🇰 备用香港`[]🇨🇳 主用台湾`[]🇨🇳 备用台湾`[]🇺🇸 主用美国`[]🇺🇸 备用美国`[]🇯🇵 主用日本`[]🇯🇵 备用日本`[]🇸🇬 主用土坡`[]🇸🇬 备用土坡`[]♻ 主用自动`[]♻ 备用自动`[]🪢 主用聚合`[]🚀 手动切换
+custom_proxy_group=💾 MEGA`select`[]🇭🇰 主用香港`[]🇭🇰 备用香港`[]🇨🇳 主用台湾`[]🇨🇳 备用台湾`[]🇺🇸 主用美国`[]🇺🇸 备用美国`[]🇯🇵 主用日本`[]🇯🇵 备用日本`[]🇸🇬 主用土坡`[]🇸🇬 备用土坡`[]♻ 主用自动`[]♻ 备用自动`[]🪢 主用聚合`[]🚀 手动切换
 custom_proxy_group=💬 ChatGPT`select`[]🇭🇰 主用香港`[]🇺🇸 主用美国`[]🇯🇵 主用日本`[]🇸🇬 主用土坡`[]🇨🇳 主用台湾`[]🚀 节点选择`[]♻ 主用自动`[]♻ 备用自动`[]🪢 主用聚合`[]🚀 手动切换
 custom_proxy_group=🎶 TikTok`select`[]🇭🇰 主用香港`[]🇺🇸 主用美国`[]🇯🇵 主用日本`[]🇸🇬 主用土坡`[]🇨🇳 主用台湾`[]🚀 节点选择
-custom_proxy_group=📹 YouTube`select`[]🇭🇰 主用香港`[]🇭🇰 备用香港`[]🇨🇳 主用台湾`[]🇨🇳 备用台湾`[]🇺🇸 主用美国`[]🇺🇸 备用美国`[]🇯🇵 主用日本`[]🇯🇵 备用日本`[]🇸🇬 主用土坡`[]🇸🇬 备用土坡`[]🇰🇷 韩国节点`[]♻ 主用自动`[]♻ 备用自动`[]🪢 主用聚合`[]🚀 手动切换
+custom_proxy_group=📹 YouTube`select`[]🇭🇰 主用香港`[]🇭🇰 备用香港`[]🇨🇳 主用台湾`[]🇨🇳 备用台湾`[]🇺🇸 主用美国`[]🇺🇸 备用美国`[]🇯🇵 主用日本`[]🇯🇵 备用日本`[]🇸🇬 主用土坡`[]🇸🇬 备用土坡`[]♻ 主用自动`[]♻ 备用自动`[]🪢 主用聚合`[]🚀 手动切换
 custom_proxy_group=📺 Bilibili`select`[]DIRECT`[]🇭🇰 主用香港`[]🇨🇳 主用台湾`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=🌍 国内媒体`select`[]🎯 全球直连`[]🇨🇳 主用台湾`[]🇭🇰 主用香港
-custom_proxy_group=🌍 国外媒体`select`[]🇭🇰 主用香港`[]🇭🇰 备用香港`[]🇨🇳 主用台湾`[]🇨🇳 备用台湾`[]🇺🇸 主用美国`[]🇺🇸 备用美国`[]🇯🇵 主用日本`[]🇯🇵 备用日本`[]🇸🇬 主用土坡`[]🇸🇬 备用土坡`[]🇰🇷 韩国节点`[]♻ 主用自动`[]♻ 备用自动`[]🪢 主用聚合`[]🚀 手动切换
+custom_proxy_group=🌍 国外媒体`select`[]🇭🇰 主用香港`[]🇭🇰 备用香港`[]🇨🇳 主用台湾`[]🇨🇳 备用台湾`[]🇺🇸 主用美国`[]🇺🇸 备用美国`[]🇯🇵 主用日本`[]🇯🇵 备用日本`[]🇸🇬 主用土坡`[]🇸🇬 备用土坡`[]♻ 主用自动`[]♻ 备用自动`[]🪢 主用聚合`[]🚀 手动切换
 custom_proxy_group=📢 谷歌FCM`select`[]🇭🇰 主用香港`[]🇺🇸 主用美国`[]🇯🇵 主用日本`[]🇸🇬 主用土坡`[]🇨🇳 主用台湾`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=🇬 谷歌服务`select`[]🇭🇰 主用香港`[]🇭🇰 备用香港`[]🇨🇳 主用台湾`[]🇨🇳 备用台湾`[]🇺🇸 主用美国`[]🇺🇸 备用美国`[]🇯🇵 主用日本`[]🇯🇵 备用日本`[]🇸🇬 主用土坡`[]🇸🇬 备用土坡`[]🇰🇷 韩国节点`[]♻ 主用自动`[]♻ 备用自动`[]🪢 主用聚合`[]🚀 手动切换
-custom_proxy_group=🍎 苹果服务`select`[]🇭🇰 主用香港`[]🇭🇰 备用香港`[]🇨🇳 主用台湾`[]🇨🇳 备用台湾`[]🇺🇸 主用美国`[]🇺🇸 备用美国`[]🇯🇵 主用日本`[]🇯🇵 备用日本`[]🇸🇬 主用土坡`[]🇸🇬 备用土坡`[]🇰🇷 韩国节点`[]♻ 主用自动`[]♻ 备用自动`[]🪢 主用聚合`[]🚀 手动切换`[]🎯 全球直连
-custom_proxy_group=Ⓜ 微软服务`select`[]🇭🇰 主用香港`[]🇭🇰 备用香港`[]🇨🇳 主用台湾`[]🇨🇳 备用台湾`[]🇺🇸 主用美国`[]🇺🇸 备用美国`[]🇯🇵 主用日本`[]🇯🇵 备用日本`[]🇸🇬 主用土坡`[]🇸🇬 备用土坡`[]🇰🇷 韩国节点`[]♻ 主用自动`[]♻ 备用自动`[]🪢 主用聚合`[]🚀 手动切换`[]🎯 全球直连
-custom_proxy_group=🐟 漏网之鱼`select`[]🇭🇰 主用香港`[]🇭🇰 备用香港`[]🇨🇳 主用台湾`[]🇨🇳 备用台湾`[]🇺🇸 主用美国`[]🇺🇸 备用美国`[]🇯🇵 主用日本`[]🇯🇵 备用日本`[]🇸🇬 主用土坡`[]🇸🇬 备用土坡`[]🇰🇷 韩国节点`[]♻ 主用自动`[]♻ 备用自动`[]🪢 主用聚合`[]🚀 手动切换
+custom_proxy_group=🇬 谷歌服务`select`[]🇭🇰 主用香港`[]🇭🇰 备用香港`[]🇨🇳 主用台湾`[]🇨🇳 备用台湾`[]🇺🇸 主用美国`[]🇺🇸 备用美国`[]🇯🇵 主用日本`[]🇯🇵 备用日本`[]🇸🇬 主用土坡`[]🇸🇬 备用土坡`[]♻ 主用自动`[]♻ 备用自动`[]🪢 主用聚合`[]🚀 手动切换
+custom_proxy_group=🍎 苹果服务`select`[]🇭🇰 主用香港`[]🇭🇰 备用香港`[]🇨🇳 主用台湾`[]🇨🇳 备用台湾`[]🇺🇸 主用美国`[]🇺🇸 备用美国`[]🇯🇵 主用日本`[]🇯🇵 备用日本`[]🇸🇬 主用土坡`[]🇸🇬 备用土坡`[]♻ 主用自动`[]♻ 备用自动`[]🪢 主用聚合`[]🚀 手动切换`[]🎯 全球直连
+custom_proxy_group=Ⓜ 微软服务`select`[]🇭🇰 主用香港`[]🇭🇰 备用香港`[]🇨🇳 主用台湾`[]🇨🇳 备用台湾`[]🇺🇸 主用美国`[]🇺🇸 备用美国`[]🇯🇵 主用日本`[]🇯🇵 备用日本`[]🇸🇬 主用土坡`[]🇸🇬 备用土坡`[]♻ 主用自动`[]♻ 备用自动`[]🪢 主用聚合`[]🚀 手动切换`[]🎯 全球直连
+custom_proxy_group=🐟 漏网之鱼`select`[]🇭🇰 主用香港`[]🇭🇰 备用香港`[]🇨🇳 主用台湾`[]🇨🇳 备用台湾`[]🇺🇸 主用美国`[]🇺🇸 备用美国`[]🇯🇵 主用日本`[]🇯🇵 备用日本`[]🇸🇬 主用土坡`[]🇸🇬 备用土坡`[]♻ 主用自动`[]♻ 备用自动`[]🪢 主用聚合`[]🚀 手动切换`[]🎯 全球直连
 custom_proxy_group=🎯 全球直连`select`[]DIRECT
-custom_proxy_group=🇭🇰 主用香港`url-test`!!GROUPID=!1!!(港|HK|hk|Hong Kong|HongKong|hongkong)`http://cp.cloudflare.com/generate_204`180,,50
+custom_proxy_group=🇭🇰 主用香港`url-test`!!GROUPID=!1!!(港|HK|hk|Hong Kong|HongKong|hongkong)`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🇭🇰 备用香港`url-test`!!GROUPID=!0!!(港|HK|hk|Hong Kong|HongKong|hongkong)`http://cp.cloudflare.com/generate_204`180
-custom_proxy_group=🇺🇸 主用美国`url-test`!!GROUPID=!1!!(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://cp.cloudflare.com/generate_204`180,,50
-custom_proxy_group=🇺🇸 备用美国`url-test`!!GROUPID=!0!!(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://cp.cloudflare.com/generate_204`180,,50
-custom_proxy_group=🇯🇵 主用日本`url-test`!!GROUPID=!1!!(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)`http://cp.cloudflare.com/generate_204`180,,50
-custom_proxy_group=🇯🇵 备用日本`url-test`!!GROUPID=!0!!(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)`http://cp.cloudflare.com/generate_204`180,,50
-custom_proxy_group=🇸🇬 主用土坡`url-test`!!GROUPID=!1!!(新加坡|坡|狮城|SG|Singapore)`http://cp.cloudflare.com/generate_204`180,,50
-custom_proxy_group=🇸🇬 备用土坡`url-test`!!GROUPID=!0!!(新加坡|坡|狮城|SG|Singapore)`http://cp.cloudflare.com/generate_204`180,,50
-custom_proxy_group=🇨🇳 主用台湾`url-test`!!GROUPID=!1!!(台|新北|彰化|TW|Taiwan)`http://cp.cloudflare.com/generate_204`180,,50
-custom_proxy_group=🇨🇳 备用台湾`url-test`!!GROUPID=!0!!(台|新北|彰化|TW|Taiwan)`http://cp.cloudflare.com/generate_204`180,,50
-custom_proxy_group=🇰🇷 韩国节点`url-test`(KR|Korea|KOR|首尔|韩|韓)`http://cp.cloudflare.com/generate_204`180,,50
+custom_proxy_group=🇺🇸 主用美国`url-test`!!GROUPID=!1!!(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🇺🇸 备用美国`url-test`!!GROUPID=!0!!(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🇯🇵 主用日本`url-test`!!GROUPID=!1!!(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🇯🇵 备用日本`url-test`!!GROUPID=!0!!(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🇸🇬 主用土坡`url-test`!!GROUPID=!1!!(新加坡|坡|狮城|SG|Singapore)`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🇸🇬 备用土坡`url-test`!!GROUPID=!0!!(新加坡|坡|狮城|SG|Singapore)`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🇨🇳 主用台湾`url-test`!!GROUPID=!1!!(台|新北|彰化|TW|Taiwan)`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🇨🇳 备用台湾`url-test`!!GROUPID=!0!!(台|新北|彰化|TW|Taiwan)`http://cp.cloudflare.com/generate_204`300,,50
 
 enable_rule_generator=true
 overwrite_original_rules=true
