--- a/Custom_Clash.ini
+++ b/Custom_Clash.ini
@@ -33,34 +33,34 @@ ruleset=🎯 全球直连,[]GEOIP,CN,no-resolve
 ruleset=🐟 漏网之鱼,[]FINAL
 
 custom_proxy_group=🚀 手动切换`select`.*
-custom_proxy_group=🚀 节点选择`select`[]🇭🇰 主用香港`[]🇭🇰 备用香港`[]🇨🇳 主用台湾`[]🇨🇳 备用台湾`[]🇺🇸 主用美国`[]🇺🇸 备用美国`[]🇯🇵 主用日本`[]🇯🇵 备用日本`[]🇸🇬 主用土坡`[]🇸🇬 备用土坡`[]🕊️ 冷门自动`[]♻ 主用自动`[]♻ 备用自动`[]🚀 手动切换
-custom_proxy_group=🚀 GitHub`select`[]🇭🇰 主用香港`[]🇨🇳 主用台湾`[]🇺🇸 主用美国`[]🇯🇵 主用日本`[]🇸🇬 主用土坡`[]♻ 主用自动`[]♻ 备用自动`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=📲 Telegram`select`[]🇭🇰 主用香港`[]🇭🇰 备用香港`[]🇨🇳 主用台湾`[]🇨🇳 备用台湾`[]🇺🇸 主用美国`[]🇺🇸 备用美国`[]🇯🇵 主用日本`[]🇯🇵 备用日本`[]🇸🇬 主用土坡`[]🇸🇬 备用土坡`[]♻ 主用自动`[]♻ 备用自动`[]🚀 手动切换
-custom_proxy_group=🦁 Kemono`select`[]🇭🇰 主用香港`[]🇭🇰 备用香港`[]🇨🇳 主用台湾`[]🇨🇳 备用台湾`[]🇺🇸 主用美国`[]🇺🇸 备用美国`[]🇯🇵 主用日本`[]🇯🇵 备用日本`[]🇸🇬 主用土坡`[]🇸🇬 备用土坡`[]♻ 主用自动`[]♻ 备用自动`[]🚀 手动切换
-custom_proxy_group=💾 MEGA`select`[]🇭🇰 主用香港`[]🇭🇰 备用香港`[]🇨🇳 主用台湾`[]🇨🇳 备用台湾`[]🇺🇸 主用美国`[]🇺🇸 备用美国`[]🇯🇵 主用日本`[]🇯🇵 备用日本`[]🇸🇬 主用土坡`[]🇸🇬 备用土坡`[]♻ 主用自动`[]♻ 备用自动`[]🚀 手动切换
-custom_proxy_group=💬 ChatGPT`select`[]🇭🇰 主用香港`[]🇺🇸 主用美国`[]🇯🇵 主用日本`[]🇸🇬 主用土坡`[]🇨🇳 主用台湾`[]🚀 节点选择`[]♻ 主用自动`[]♻ 备用自动`[]🚀 手动切换
-custom_proxy_group=🎶 TikTok`select`[]🇭🇰 主用香港`[]🇭🇰 备用香港`[]🇨🇳 主用台湾`[]🇨🇳 备用台湾`[]🇺🇸 主用美国`[]🇺🇸 备用美国`[]🇯🇵 主用日本`[]🇯🇵 备用日本`[]🇸🇬 主用土坡`[]🇸🇬 备用土坡`[]♻ 主用自动`[]♻ 备用自动`[]🚀 手动切换
-custom_proxy_group=📹 YouTube`select`[]🇭🇰 主用香港`[]🇭🇰 备用香港`[]🇨🇳 主用台湾`[]🇨🇳 备用台湾`[]🇺🇸 主用美国`[]🇺🇸 备用美国`[]🇯🇵 主用日本`[]🇯🇵 备用日本`[]🇸🇬 主用土坡`[]🇸🇬 备用土坡`[]♻ 主用自动`[]♻ 备用自动`[]🚀 手动切换
-custom_proxy_group=🌍 国外媒体`select`[]🇭🇰 主用香港`[]🇭🇰 备用香港`[]🇨🇳 主用台湾`[]🇨🇳 备用台湾`[]🇺🇸 主用美国`[]🇺🇸 备用美国`[]🇯🇵 主用日本`[]🇯🇵 备用日本`[]🇸🇬 主用土坡`[]🇸🇬 备用土坡`[]♻ 主用自动`[]♻ 备用自动`[]🚀 手动切换
-custom_proxy_group=📢 谷歌FCM`select`[]🇭🇰 主用香港`[]🇺🇸 主用美国`[]🇯🇵 主用日本`[]🇸🇬 主用土坡`[]🇨🇳 主用台湾`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=🇬 谷歌服务`select`[]🇭🇰 主用香港`[]🇭🇰 备用香港`[]🇨🇳 主用台湾`[]🇨🇳 备用台湾`[]🇺🇸 主用美国`[]🇺🇸 备用美国`[]🇯🇵 主用日本`[]🇯🇵 备用日本`[]🇸🇬 主用土坡`[]🇸🇬 备用土坡`[]♻ 主用自动`[]♻ 备用自动`[]🚀 手动切换
-custom_proxy_group=🍎 苹果服务`select`[]🇭🇰 主用香港`[]🇭🇰 备用香港`[]🇨🇳 主用台湾`[]🇨🇳 备用台湾`[]🇺🇸 主用美国`[]🇺🇸 备用美国`[]🇯🇵 主用日本`[]🇯🇵 备用日本`[]🇸🇬 主用土坡`[]🇸🇬 备用土坡`[]♻ 主用自动`[]♻ 备用自动`[]🚀 手动切换`[]🎯 全球直连
-custom_proxy_group=Ⓜ 微软服务`select`[]🇭🇰 主用香港`[]🇭🇰 备用香港`[]🇨🇳 主用台湾`[]🇨🇳 备用台湾`[]🇺🇸 主用美国`[]🇺🇸 备用美国`[]🇯🇵 主用日本`[]🇯🇵 备用日本`[]🇸🇬 主用土坡`[]🇸🇬 备用土坡`[]♻ 主用自动`[]♻ 备用自动`[]🚀 手动切换`[]🎯 全球直连
-custom_proxy_group=🐟 漏网之鱼`select`[]🇭🇰 主用香港`[]🇭🇰 备用香港`[]🇨🇳 主用台湾`[]🇨🇳 备用台湾`[]🇺🇸 主用美国`[]🇺🇸 备用美国`[]🇯🇵 主用日本`[]🇯🇵 备用日本`[]🇸🇬 主用土坡`[]🇸🇬 备用土坡`[]♻ 主用自动`[]♻ 备用自动`[]🚀 手动切换`[]🎯 全球直连
+custom_proxy_group=🚀 节点选择`select`[]🇭🇰 IEPL香港`[]🇭🇰 香港自动`[]🇨🇳 IEPL台湾`[]🇨🇳 台湾自动`[]🇺🇸 IEPL美国`[]🇺🇸 美国自动`[]🇯🇵 IEPL日本`[]🇯🇵 日本自动`[]🇸🇬 IEPL土坡`[]🇸🇬 土坡自动`[]🕊️ 冷门自动`[]♻ IEPL自动`[]♻ 自动选择`[]🚀 手动切换
+custom_proxy_group=🚀 GitHub`select`[]🇭🇰 IEPL香港`[]🇨🇳 IEPL台湾`[]🇺🇸 IEPL美国`[]🇯🇵 IEPL日本`[]🇸🇬 IEPL土坡`[]♻ IEPL自动`[]♻ 自动选择`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=📲 Telegram`select`[]🇭🇰 IEPL香港`[]🇭🇰 香港自动`[]🇨🇳 IEPL台湾`[]🇨🇳 台湾自动`[]🇺🇸 IEPL美国`[]🇺🇸 美国自动`[]🇯🇵 IEPL日本`[]🇯🇵 日本自动`[]🇸🇬 IEPL土坡`[]🇸🇬 土坡自动`[]♻ IEPL自动`[]♻ 自动选择`[]🚀 手动切换
+custom_proxy_group=🦁 Kemono`select`[]🇭🇰 IEPL香港`[]🇭🇰 香港自动`[]🇨🇳 IEPL台湾`[]🇨🇳 台湾自动`[]🇺🇸 IEPL美国`[]🇺🇸 美国自动`[]🇯🇵 IEPL日本`[]🇯🇵 日本自动`[]🇸🇬 IEPL土坡`[]🇸🇬 土坡自动`[]♻ IEPL自动`[]♻ 自动选择`[]🚀 手动切换
+custom_proxy_group=💾 MEGA`select`[]🇭🇰 IEPL香港`[]🇭🇰 香港自动`[]🇨🇳 IEPL台湾`[]🇨🇳 台湾自动`[]🇺🇸 IEPL美国`[]🇺🇸 美国自动`[]🇯🇵 IEPL日本`[]🇯🇵 日本自动`[]🇸🇬 IEPL土坡`[]🇸🇬 土坡自动`[]♻ IEPL自动`[]♻ 自动选择`[]🚀 手动切换
+custom_proxy_group=💬 ChatGPT`select`[]🇭🇰 IEPL香港`[]🇺🇸 IEPL美国`[]🇯🇵 IEPL日本`[]🇸🇬 IEPL土坡`[]🇨🇳 IEPL台湾`[]🚀 节点选择`[]♻ IEPL自动`[]♻ 自动选择`[]🚀 手动切换
+custom_proxy_group=🎶 TikTok`select`[]🇭🇰 IEPL香港`[]🇭🇰 香港自动`[]🇨🇳 IEPL台湾`[]🇨🇳 台湾自动`[]🇺🇸 IEPL美国`[]🇺🇸 美国自动`[]🇯🇵 IEPL日本`[]🇯🇵 日本自动`[]🇸🇬 IEPL土坡`[]🇸🇬 土坡自动`[]♻ IEPL自动`[]♻ 自动选择`[]🚀 手动切换
+custom_proxy_group=📹 YouTube`select`[]🇭🇰 IEPL香港`[]🇭🇰 香港自动`[]🇨🇳 IEPL台湾`[]🇨🇳 台湾自动`[]🇺🇸 IEPL美国`[]🇺🇸 美国自动`[]🇯🇵 IEPL日本`[]🇯🇵 日本自动`[]🇸🇬 IEPL土坡`[]🇸🇬 土坡自动`[]♻ IEPL自动`[]♻ 自动选择`[]🚀 手动切换
+custom_proxy_group=🌍 国外媒体`select`[]🇭🇰 IEPL香港`[]🇭🇰 香港自动`[]🇨🇳 IEPL台湾`[]🇨🇳 台湾自动`[]🇺🇸 IEPL美国`[]🇺🇸 美国自动`[]🇯🇵 IEPL日本`[]🇯🇵 日本自动`[]🇸🇬 IEPL土坡`[]🇸🇬 土坡自动`[]♻ IEPL自动`[]♻ 自动选择`[]🚀 手动切换
+custom_proxy_group=📢 谷歌FCM`select`[]🇭🇰 IEPL香港`[]🇺🇸 IEPL美国`[]🇯🇵 IEPL日本`[]🇸🇬 IEPL土坡`[]🇨🇳 IEPL台湾`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=🇬 谷歌服务`select`[]🇭🇰 IEPL香港`[]🇭🇰 香港自动`[]🇨🇳 IEPL台湾`[]🇨🇳 台湾自动`[]🇺🇸 IEPL美国`[]🇺🇸 美国自动`[]🇯🇵 IEPL日本`[]🇯🇵 日本自动`[]🇸🇬 IEPL土坡`[]🇸🇬 土坡自动`[]♻ IEPL自动`[]♻ 自动选择`[]🚀 手动切换
+custom_proxy_group=🍎 苹果服务`select`[]🇭🇰 IEPL香港`[]🇭🇰 香港自动`[]🇨🇳 IEPL台湾`[]🇨🇳 台湾自动`[]🇺🇸 IEPL美国`[]🇺🇸 美国自动`[]🇯🇵 IEPL日本`[]🇯🇵 日本自动`[]🇸🇬 IEPL土坡`[]🇸🇬 土坡自动`[]♻ IEPL自动`[]♻ 自动选择`[]🚀 手动切换`[]🎯 全球直连
+custom_proxy_group=Ⓜ 微软服务`select`[]🇭🇰 IEPL香港`[]🇭🇰 香港自动`[]🇨🇳 IEPL台湾`[]🇨🇳 台湾自动`[]🇺🇸 IEPL美国`[]🇺🇸 美国自动`[]🇯🇵 IEPL日本`[]🇯🇵 日本自动`[]🇸🇬 IEPL土坡`[]🇸🇬 土坡自动`[]♻ IEPL自动`[]♻ 自动选择`[]🚀 手动切换`[]🎯 全球直连
+custom_proxy_group=🐟 漏网之鱼`select`[]🇭🇰 IEPL香港`[]🇭🇰 香港自动`[]🇨🇳 IEPL台湾`[]🇨🇳 台湾自动`[]🇺🇸 IEPL美国`[]🇺🇸 美国自动`[]🇯🇵 IEPL日本`[]🇯🇵 日本自动`[]🇸🇬 IEPL土坡`[]🇸🇬 土坡自动`[]♻ IEPL自动`[]♻ 自动选择`[]🚀 手动切换`[]🎯 全球直连
 custom_proxy_group=🌍 国内媒体`select`[]🎯 全球直连
 custom_proxy_group=🎯 全球直连`select`[]DIRECT
-custom_proxy_group=♻ 主用自动`url-test`!!GROUPID=!1!!.*`http://www.gstatic.com/generate_204`300,,35
-custom_proxy_group=♻ 备用自动`url-test`!!GROUPID=!0!!(港|HK|hongkong|Hong Kong|台|台湾|TW|Taiwan|新加坡|SG|Singapore|日本|JP|Japan|美|US|United States)`http://www.gstatic.com/generate_204`300,,35
-custom_proxy_group=🇭🇰 主用香港`url-test`!!GROUPID=!1!!(港|HK|hk|Hong Kong|HongKong|hongkong)`http://www.gstatic.com/generate_204`300,,35
-custom_proxy_group=🇭🇰 备用香港`url-test`!!GROUPID=!0!!(港|HK|hk|Hong Kong|HongKong|hongkong)`http://www.gstatic.com/generate_204`300,,35
-custom_proxy_group=🇺🇸 主用美国`url-test`!!GROUPID=!1!!(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://www.gstatic.com/generate_204`300,,35
-custom_proxy_group=🇺🇸 备用美国`url-test`!!GROUPID=!0!!(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://www.gstatic.com/generate_204`300,,35
-custom_proxy_group=🇯🇵 主用日本`url-test`!!GROUPID=!1!!(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)`http://www.gstatic.com/generate_204`300,,35
-custom_proxy_group=🇯🇵 备用日本`url-test`!!GROUPID=!0!!(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)`http://www.gstatic.com/generate_204`300,,35
-custom_proxy_group=🇸🇬 主用土坡`url-test`!!GROUPID=!1!!(新加坡|坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`300,,35
-custom_proxy_group=🇸🇬 备用土坡`url-test`!!GROUPID=!0!!(新加坡|坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`300,,35
-custom_proxy_group=🇨🇳 主用台湾`url-test`!!GROUPID=!1!!(台|新北|彰化|TW|Taiwan)`http://www.gstatic.com/generate_204`300,,35
-custom_proxy_group=🇨🇳 备用台湾`url-test`!!GROUPID=!0!!(台|新北|彰化|TW|Taiwan)`http://www.gstatic.com/generate_204`300,,35
+custom_proxy_group=♻ IEPL自动`url-test`!!GROUPID=!1!!.*`http://www.gstatic.com/generate_204`300,,35
+custom_proxy_group=♻ 自动选择`url-test`!!GROUPID=!0!!(港|HK|hongkong|Hong Kong|台|台湾|TW|Taiwan|新加坡|SG|Singapore|日本|JP|Japan|美|US|United States)`http://www.gstatic.com/generate_204`300,,35
+custom_proxy_group=🇭🇰 IEPL香港`url-test`!!GROUPID=!1!!(港|HK|hk|Hong Kong|HongKong|hongkong)`http://www.gstatic.com/generate_204`300,,35
+custom_proxy_group=🇭🇰 香港自动`url-test`!!GROUPID=!0!!(港|HK|hk|Hong Kong|HongKong|hongkong)`http://www.gstatic.com/generate_204`300,,35
+custom_proxy_group=🇺🇸 IEPL美国`url-test`!!GROUPID=!1!!(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://www.gstatic.com/generate_204`300,,35
+custom_proxy_group=🇺🇸 美国自动`url-test`!!GROUPID=!0!!(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://www.gstatic.com/generate_204`300,,35
+custom_proxy_group=🇯🇵 IEPL日本`url-test`!!GROUPID=!1!!(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)`http://www.gstatic.com/generate_204`300,,35
+custom_proxy_group=🇯🇵 日本自动`url-test`!!GROUPID=!0!!(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)`http://www.gstatic.com/generate_204`300,,35
+custom_proxy_group=🇸🇬 IEPL土坡`url-test`!!GROUPID=!1!!(新加坡|坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`300,,35
+custom_proxy_group=🇸🇬 土坡自动`url-test`!!GROUPID=!0!!(新加坡|坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`300,,35
+custom_proxy_group=🇨🇳 IEPL台湾`url-test`!!GROUPID=!1!!(台|新北|彰化|TW|Taiwan)`http://www.gstatic.com/generate_204`300,,35
+custom_proxy_group=🇨🇳 台湾自动`url-test`!!GROUPID=!0!!(台|新北|彰化|TW|Taiwan)`http://www.gstatic.com/generate_204`300,,35
 custom_proxy_group=🕊️ 冷门自动`select`^(?!.*(香港|HK|hongkong|Hong Kong|台|台湾|TW|Taiwan|新加坡|SG|Singapore|日本|JP|Japan|美|US|United States|流量|套餐|官网|刷新|异常|重置)).*$`http://www.gstatic.com/generate_204`300,,35
 
 enable_rule_generator=true
